# market-scout

./: .gitignore  CLAUDE.md  LICENSE  PLANNED_monitor.md  README.md  adding-a-provider.md  design.md  pyproject.toml  requirements.txt
examples/: commodore64-ai-analysis.html  commodore64-europe.html
market_scout/: cli.py  config.py  currency.py  dates.py  llm.py  models.py  output.py  save.py
market_scout/providers/: __init__.py  base.py
market_scout/providers/at/shpock/: provider.py
market_scout/providers/at/willhaben/: provider.py
market_scout/providers/cz/bazos/: provider.py  scraper.py
market_scout/providers/de/kleinanzeigen/: provider.py
market_scout/providers/fr/leboncoin/: provider.py
market_scout/providers/hu/hardverapro/: provider.py
market_scout/providers/hu/jofogas/: provider.py
market_scout/providers/hu/vatera/: provider.py
market_scout/providers/it/subito/: provider.py
market_scout/providers/multi/allegro/: provider_cz.py  provider_pl.py  provider_sk.py  scraper.py
market_scout/providers/multi/bazos/: provider_cz.py  provider_sk.py  scraper.py
market_scout/providers/multi/olx/: provider_bg.py  provider_pl.py  provider_pt.py  provider_ro.py  provider_ua.py  scraper.py
market_scout/providers/multi/wallapop/: provider.py
market_scout/providers/sk/bazos/: provider.py
market_scout/providers/worldwide/facebook/: config.py  location_db.py  locations.json  models.py  provider.py  scraper.py
output/2026-07-12/: market-scout_213857.html
scripts/: discover_all_fb_ids.py
