[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "market-scout"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "playwright>=1.44",
    "playwright-stealth>=1.0",
    "browserforge>=1.1",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "curl_cffi>=0.7",
]

[project.scripts]
market-scout = "market_scout.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["market_scout*"]
